changement de sujet + squelette de front

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 
 
 <mat-card align="center">
-  <h1>Gestionnaire d'ordonnance médicale</h1>
+  <h1>YOUR BODY</h1>
 </mat-card>
             <div style="padding-left: 300px;margin:100px">
-           <input type="text" placeholder="Symptomes....." size="60" style="height: 35px;"  />
+           <input type="text" placeholder="Seances....." size="60" style="height: 35px;"  />
 
           <input type="image"   src="assets/images/searchlogo.png" width="40" height="40" />
 
@@ -12,4 +12,5 @@
 
 
 
-<nwt-listsymptome></nwt-listsymptome>
+<router-outlet></router-outlet>
+
