ajout vue supression il ne manque pluque l'update !

--- a/src/app/listseance/listseance.component.html
+++ b/src/app/listseance/listseance.component.html
@@ -1,6 +1,6 @@
 
 <section *ngFor="let seance of seances">
-<nwt-card [seance]="seance" >
+<nwt-card [seance]="seance" (seanceDelete)="delete($event)">
 
 </nwt-card>
 </section>
