--- a/src/app/listseance/listseance.component.html
+++ b/src/app/listseance/listseance.component.html
@@ -1,12 +1,31 @@
+<section [ngSwitch]="view">
 
-<section *ngFor="let seance of seances">
-<nwt-card [seance]="seance" (seanceDelete)="delete($event)">
+  <section *ngSwitchCase="'card'">
+      <nwt-card [seance]="seance" (seanceDelete)="delete($event)" *ngFor="let seance of seances"></nwt-card>
+  </section>
 
-</nwt-card>
+  <section *ngSwitchCase="'list'">
+    <mat-list >
+      <mat-list-item  class="mat-whiteframe-2dp mat-card" *ngFor="let seance of seances">
+        <img mat-list-avatar *ngIf="isTypeForce(seance)" mat-card-mat-image src="assets/images/type/force.png">
+        <img mat-list-avatar *ngIf="isTypeCardio(seance)" mat-card-mat-image src="assets/images/type/cardio.png">
+        <img mat-list-avatar *ngIf="isTypePertedePoids(seance)" mat-card-mat-image src="assets/images/type/pertedepoids.png">
+        <a [routerLink]="['/seance', seance.id]">
+          <h3 matLine>{{ seance.nom | uppercase }} </h3>
+        </a>
+      </mat-list-item>
+    </mat-list>
+  </section>
+
 </section>
 
-<button (click)="showDialog()" *ngIf="dialogStatus === 'inactive'" mat-fab color="accent">
+<section  class ="buttons-fab" *ngIf="dialogStatus === 'inactive'">
+<button (click)="showDialog()"  mat-fab color="accent" class="button-add">
   <i class="material-icons">add</i>
 </button>
-
+<button (click)="switchView()" mat-fab color="warn">
+  <i class="material-icons" *ngIf="view === 'card'" >list</i>
+  <i class="material-icons" *ngIf="view === 'list'" >view_stream</i>
+</button>
+</section>
 
