Amelioration au niveau de l'interface details

--- a/src/app/seance/seance.component.html
+++ b/src/app/seance/seance.component.html
@@ -1,6 +1,7 @@
 <section (click)="afficher($event)">
 
-  <nwt-card [seance]="seance"></nwt-card>
+  <nwt-details [seance]="seance"></nwt-details>
+
 
 </section>
 
