--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,31 @@
-<nwt-listseance></nwt-listseance>
+<div class="main_container">
+
+  <div class="inside_main_container">
+    <div class="title">
+      Your Body
+    </div>
+  </div>
+
+  <div class="inside_main_container">
+    <div class="description">
+      Notre Application
+    </div>
+  </div>
+
+  <div class="inside_main_container">
+    <div class="paragraphe">
+        Bonjour et bienvenu sur notre application Your Body.<br/>
+    Avec cette application prenez vous en main !<br/>
+    Nous vous invitons à choisir vos seances de sport à venir.<br/>
+    </div>
+
+
+    <div class="inside_main_container">
+      <div class="en_main">
+        <a [routerLink]="['/seances']">Prenez vous en main !</a>
+      </div>
+    </div>
+
+
+
+
