--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="extend-toolbar">
   <span>
     <a [routerLink]="['/']">
-      <img src="assets/images/icon.png" aria-label="nwt" alt="NWT">
+      <img src="assets/images/icon.png">
     </a>
   </span>
 
