--- a/src/app/shared/dialog/dialog.component.html
+++ b/src/app/shared/dialog/dialog.component.html
@@ -1,1 +1,1 @@
-<nwt-form (cancel)="onCancel()" (seanceAdd)="onSave($event)" [model]="data"></nwt-form>
+<ybd-form (cancel)="onCancel()" (seanceAdd)="onSave($event)" [model]="data"></ybd-form>
